Fix breadcrumb top banner overlap

--- a/skin/frontend/reman/default/css/styles.css
+++ b/skin/frontend/reman/default/css/styles.css
@@ -2155,12 +2155,14 @@ background-position: 0px 20px;
 	background:url(../images/top_banner.png) no-repeat;
 	width:601px;
 	height:75px;
-	margin-top:22px;
+	/*margin-top:22px;*/
 	padding-top: 8px;
 	padding-left: 15px;
 	color: #fff;
 	font-size: 25px;
 	font-weight: bold;
+	position:relative;
+	float:left;
 }
 /*Group select block*/
 #group_select{
